# QReaddy

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  pdfcoverdelegate.cpp  pdfcoverdelegate.h  pdfviewer.cpp  pdfviewer.h  progressbar_delegate.cpp  progressbar_delegate.h  summarize.py
graphs/: data.csv  data2.csv  data3.csv  sc1.sci  sc2.sci  sc3.sci
sql files/: schema.sql
